Entrypoint arguments as ENV vars in compose